<resources>
    <string name="app_name">SimplePrayerTimes</string>
    <string name="fajr">Fajr</string>
    <string name="zuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="dummy_time">5:00</string>
    <string name="refresh">Refresh</string>
    <string name="date">Date</string>
</resources>
