<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Base.Theme.AppCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mushfiqmahmud.simpleprayertimes.MainActivity">

    <LinearLayout
        android:background="#000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50sp"
            android:text="@string/date"
            android:textAlignment="viewStart"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fajr"
                        android:padding="10sp"
                        android:textAlignment="center"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/fajr_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dummy_time"
                        android:padding="10sp"
                        android:textAlignment="center"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/zuhr"
                        android:padding="10sp"
                        android:textAlignment="center"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/zuhr_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dummy_time"
                        android:padding="10sp"
                        android:textAlignment="center"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/asr"
                        android:padding="10sp"
                        android:textAlignment="center"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/asr_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dummy_time"
                        android:padding="10sp"
                        android:textAlignment="center"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/maghrib"
                        android:padding="10sp"
                        android:textAlignment="center"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/maghrib_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dummy_time"
                        android:padding="10sp"
                        android:textAlignment="center"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:textAlignment="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/isha"
                        android:padding="10sp"
                        android:textAlignment="center"
                        android:textSize="25sp"/>

                    <TextView
                        android:id="@+id/isha_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dummy_time"
                        android:padding="10sp"
                        android:textAlignment="center"
                        android:textSize="25sp"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
